--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "app/static/figures"]
-	path = app/static/figures
+[submodule "app/static/KCL-content"]
+	path = app/static/KCL-content
 	url = https://github.com/argutai/KCL-Content.git
